--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,14 @@
     <title>El titulo del post</title>
 </head>
 <body>
-    <h1>Aquí vamos a hacer un blog post</h1>
-    <p>Este es el pararfo de inicio de mi blog post</p>
+    <div id="container">
+        <div id="post">
+            <h1>Este es el interesante y atractivo titulo del post</h1>
+            <p>
+                Este es el parrafo de inicio donde vamos a exolicar
+                las increibles cosas que se pueden hacer con ramas.
+            </p>
+        </div>
+    </div>
 </body>
 </html>
