--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="container">
+        <div id=" cabecera">
+            <header>Cabecera</header>
+        </div>
         <div id="post">
             <h1>Este es el interesante y atractivo titulo del post</h1>
             <p>
