--- a/blogpost.html
+++ b/blogpost.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <div id="container">
-        <div id=" cabecera">
-            <header>Cabecera</header>
+        <div id="cabecera">
+            HyperBlog
+            <span id="tagline">Tu blog de Confianza</span>
         </div>
         <div id="post">
             <h1>Este es el interesante y atractivo titulo del post</h1>
