--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,13 @@
                 Este es el parrafo de inicio donde vamos a exolicar
                 las increibles cosas que se pueden hacer con ramas.
             </p>
+            <p>
+                Los blogs son las mejor forma de compartir
+                información y tus ideas. Mucho más que ir a
+                conferencias o salir en YouTube. Excepto si 
+                eres un rockstar. Pero estadisticamente no lo
+                eres.... por ahora.
+            </p>
         </div>
     </div>
 </body>
