--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="cabecera">
             HyperBlog
-            <span id="tagline">Tu blog de Confianza</span>
+            <span id="tagline">Tu blog de maestro</span>
         </div>
         <div id="post">
             <h1>Este es el interesante y atractivo titulo del post</h1>
@@ -25,6 +25,9 @@
                 conferencias o salir en YouTube. Excepto si 
                 eres un rockstar. Pero estadisticamente no lo
                 eres.... por ahora.
+            </p>
+            <p>
+                Suscribete y dale like...
             </p>
         </div>
     </div>
