--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
+            <img id="logo" src="Imagenes/Logo Space X.png" alt="Space X">
             HyperBlog
             <span id="tagline">Tu blog de Cabecera</span>
         </div>
