--- a/blogpost.html
+++ b/blogpost.html
@@ -17,8 +17,8 @@
         <div id="post">
             <h1>Este es el interesante y atractivo titulo del post</h1>
             <p>
-                Este es el párrafo de inicio donde vamos a explicar
-                las increíbles cosas que se pueden hacer con ramas.
+                Este es el p&aacute;rrafo de inicio donde vamos a explicar
+                las incre&iacute;bles cosas que se pueden hacer con ramas.
             </p>
             <p>
                 Los blogs son las mejor forma de compartir
