--- a/blogpost.html
+++ b/blogpost.html
@@ -22,9 +22,9 @@
             </p>
             <p>
                 Los blogs son las mejor forma de compartir
-                información y tus ideas. Mucho más que ir a
+                informaci&oacute;n y tus ideas. Mucho m&aacute;s que ir a
                 conferencias o salir en YouTube. Excepto si 
-                eres un rockstar. Pero estadisticamente no lo
+                eres un rockstar. Pero estad&iacute;sticamente no lo
                 eres.... por ahora.
             </p>
             <p>
