--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
         <div id="cabecera">
             <img id="logo" src="Imagenes/Logo Space X.png" alt="Space X">
             HyperBlog
-            <span id="tagline">Tu blog de Cabecera</span>
+            <span id="tagline">Tu blog del Futuro</span>
         </div>
         <div id="post">
             <h1>Este es el interesante y atractivo titulo del post</h1>
